<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    tools:context=".ui.LoginActivity">


    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/userName"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="@+id/txtUserName"
        android:layout_centerHorizontal="@+id/txtUserName"
        android:layout_marginTop="38dp"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword"/>

    <CheckBox
        android:id="@+id/chkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtPassword"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/txtPassword"
        android:text="@string/stayLogged" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/chkLogin"
        android:layout_alignLeft="@+id/chkLogin"
        android:layout_alignRight="@+id/chkLogin"
        android:layout_gravity="center"
        android:layout_below="@+id/chkLogin"
        android:layout_marginTop="38dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/txtCadastroUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:text="@string/newUser"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

</LinearLayout>
